--- a/config/database.yml
+++ b/config/database.yml
@@ -80,6 +80,7 @@ test:
 #
 production:
   <<: *default
-  database: nbplayground_production
-  username: nbplayground
-  password: <%= ENV['NBPLAYGROUND_DATABASE_PASSWORD'] %>
+  #database: d6fpbd76r6ucj9
+  #username: qastpmvqhdqwtj
+  #password: <%= ENV['NBPLAYGROUND_DATABASE_PASSWORD'] %>
+  url: postgres://qastpmvqhdqwtj:01qIZQIzjorzoInbMhz8j6z_Ur@ec2-184-73-221-47.compute-1.amazonaws.com:5432/d6fpbd76r6ucj9
