--- a/config/database.yml
+++ b/config/database.yml
@@ -83,4 +83,4 @@ production:
   #database: d6fpbd76r6ucj9
   #username: qastpmvqhdqwtj
   #password: <%= ENV['NBPLAYGROUND_DATABASE_PASSWORD'] %>
-  url: postgres://sxyezelklywudg:a28k6ACfTcXUtQ1KzDuobRX-ya@ec2-184-73-221-47.compute-1.amazonaws.com:5432/d8nvpga7iajrf3
+  url: postgres://xwpmwtzptzigtl:Zqeing-iNC9qag3caSjhxOvdlx@ec2-54-235-99-46.compute-1.amazonaws.com:5432/d1alr51tamja3t
